--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,31 +29,35 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.cardview:cardview:1.0.0'
-    /*implementation 'com.android.support:cardview-v7:25.3.1 android'*/
-   /* implementation 'com.android.support.cardview-v7:26.0.0-alpha1'*/
-//    implementation 'com.android.support.appcompat-v7:26.0.0-alpha1'
 
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    implementation  'com.lorentzos.swipecards:library:1.0.9'
-    implementation 'com.google.android.gms:play-services-tasks:17.2.1'
-    implementation 'com.android.support:support-annotations:28.0.0'
-    implementation 'androidx.annotation:annotation:1.3.0'
-
-
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    /*testImplementation 'junit:junit:4.13.2.'*/
+    implementation 'com.google.firebase:firebase-inappmessaging:20.1.1'
+    testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation platform('com.google.firebase:firebase-bom:29.0.2')
-    implementation 'com.google.firebase:firebase-config'
-    implementation 'com.google.firebase:firebase-auth'
-    implementation 'com.google.firebase:firebase-storage:20.0.0'
-    implementation 'com.google.firebase:firebase-database'
-    implementation 'com.github.bumptech.glide:glide:4.0.0'
 
+
+    implementation  'com.lorentzos.swipecards:library:1.0.9'
+    implementation platform('com.google.firebase:firebase-bom:29.0.3')
+
+    // Declare the dependency for the Cloud Storage library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-storage'
+
+
+
+    // Add the dependency for the Firebase SDK for Google Analytics
+    // When using the BoM, don't specify versions in Firebase dependencies
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-database:20.0.3'
+    // implementation  'com.google.firebase:firebase-config:21.0.3'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.google.firebase:firebase-config'
+    implementation 'com.github.bumptech.glide:glide:4.0.0'
 
 
 }
